--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@chakra-ui/react": "^1.2.1",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "dayjs": "^1.10.4",
     "framer-motion": "^3.3.0",
     "next": "10.0.6",
     "react": "17.0.1",
